[project]
name = "etl-testing-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "awkward>=2.9.0",
    "cocina",
    "colored>=2.3.1",
    "emoji>=2.15.0",
    "etlup>=4.2.7",
    "flask>=3.1.3",
    "gitpython>=3.1.46",
    "hist>=2.10.1",
    "i2c-gui2>=0.1.14",
    "mplhep>=1.1.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyqt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
    "uhal; sys_platform == 'linux'",
    "yahist>=1.14.2",
    "tamalero",
]

[tool.uv.sources]
cocina = { git = "https://github.com/danbarto/cocina.git", rev = "v1.0.0" }
tamalero = { workspace = true }

[tool.uv.workspace]
members = [
    "module_test_sw",
]

[tool.setuptools.packages.find]
where = ["."]
